Update project description in config.yml

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
 title: Saqer Terkawi
-description: AI Bots & Automation Projects — 6FE Platform
+description: Data Analytics Portfolio — ETL Pipelines, NLP Analytics, Subscription Intelligence
 theme: jekyll-theme-cayman
